SaveToFile fix 12:34